# BevyGame

./: .rustfmt.toml  Cargo.toml  README.md  ideas.md  run_local.sh  rustfmt.toml
.cargo/: config.toml
crates/game_main/: Cargo.toml
crates/game_main/assets/shaders/: test.frag  test.vert
crates/game_main/src/: main.rs  plugins.rs  util.rs
crates/game_main/src/plugins/: camera.rs  config.rs  debug.rs  input.rs  physics.rs  player.rs  random.rs  tiles.rs
crates/game_main/src/plugins/camera/: bundle.rs  plugin.rs  projection.rs
crates/game_main/src/plugins/config/: bindings.rs  camera.rs  debug.rs  plugin.rs
crates/game_main/src/plugins/input/: action.rs  cursor.rs  plugin.rs
crates/game_main/src/plugins/physics/: aabb.rs  components.rs  events.rs  plugin.rs  quadtree.rs  resources.rs
crates/game_main/src/plugins/tiles/: grid.rs  plugin.rs  tile.rs  world.rs
crates/game_main/src/util/: projection_ext.rs
crates/game_morton/: Cargo.toml
crates/game_morton/src/: lib.rs
engine/: .gitignore  Cargo.toml
engine/crates/game_camera/: Cargo.toml
engine/crates/game_camera/src/: bundle.rs  config.rs  lib.rs  plugin.rs  projection.rs  projection_ext.rs  state.rs  systems.rs
engine/crates/game_controller/: Cargo.toml
engine/crates/game_controller/src/: entity.rs  lib.rs  plugin.rs  systems.rs
engine/crates/game_core/: Cargo.toml
engine/crates/game_core/src/: builder_ext.rs  combinators.rs  lib.rs  modes.rs  plugin.rs  random.rs  resources.rs  systems.rs
engine/crates/game_core/src/loading/: plugin.rs  resources.rs  systems.rs
engine/crates/game_core/src/modes/: mode.rs  mode_ext.rs  systems.rs
engine/crates/game_core/src/random/: config.rs  events.rs  plugin.rs  systems.rs
engine/crates/game_input/: Cargo.toml
engine/crates/game_input/src/: action.rs  config.rs  cursor.rs  lib.rs  plugin.rs  systems.rs
engine/crates/game_lib/: Cargo.toml
engine/crates/game_lib/src/: lib.rs
engine/crates/game_main/: Cargo.toml
engine/crates/game_main/assets/shaders/: region.frag  region.vert  test.frag  tiles.frag  tiles.vert
engine/crates/game_main/src/: main.rs  plugins.rs
engine/crates/game_main/src/plugins/: config.rs  debug.rs  player.rs  timed.rs
engine/crates/game_main/src/plugins/config/: debug.rs  plugin.rs
engine/crates/game_physics/: Cargo.toml
engine/crates/game_physics/src/: broad_phase.rs  components.rs  events.rs  lib.rs  line.rs  plugin.rs  resources.rs  stage.rs  systems.rs
engine/crates/game_physics/src/bodies/: aabb.rs
engine/crates/game_physics/src/broad_phase/: broad_phase.rs  quadtree.rs
engine/crates/game_tiles/: Cargo.toml
engine/crates/game_tiles/src/: generation.rs  lib.rs  plugin.rs  render.rs  systems.rs  tile.rs  world.rs
engine/crates/game_tiles/src/generation/: flat.rs  noise.rs  terrain.rs  world_generator.rs
engine/crates/game_tiles/src/render/: entity.rs  graph.rs  material.rs  mesh.rs  node.rs  pipeline.rs  test_node.rs
engine/crates/game_tiles/src/world/: game_world.rs  position.rs  region.rs
engine/crates/game_wasi/: Cargo.toml
engine/crates/game_wasi/src/: lib.rs  plugin.rs  systems.rs
engine/crates/game_wasi/src/module/: manifest.rs
engine/crates/game_wasi/src/runner/: runner.rs
engine/crates/game_world_gen/: Cargo.toml
engine/crates/game_world_gen/src/: generator.rs  lib.rs
modules/: Cargo.toml
modules/.cargo/: config.toml
modules/crates/mod_api/: Cargo.toml
modules/crates/mod_api/src/: std.rs  wasm_safe.rs
modules/crates/mod_api/src/std/: option.rs
modules/crates/mod_core/: Cargo.toml
modules/crates/mod_core/src/: lib.rs
