[package]
name = "game_lib"
version = "0.1.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2018"

[features]
default = []
trace = ["bevy/trace", "bevy/trace_chrome"]

[dependencies]
anyhow = "1"
# bevy = "0.5"
bevy = { path = "../../../../bevy" }
crossbeam = "0.8"
derive_more = "0.99"
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
