[package]
name = "game_main"
version = "0.1.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2018"

[features]
default = []
trace = ["game_lib/trace"]

[dependencies]
game_lib = "*"
game_morton = "*"
game_physics = "*"
game_tiles = "*"
game_camera = "*"
game_input = "*"
game_controller = "*"
game_core = "*"
game_world_gen = "*"
game_wasi = "*"
