[package]
name = "game_wasi"
version = "0.1.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.4"
tracing = "0.1"
anyhow = "1"
wasmer = "1"
wasmer-wasi = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "0.11", features = ["serde"] }
